ingress/ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
spec:
  defaultBackend:
    service:
      name: MyApp
      port:
        number: 80
